2005-07-06  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * kwq/KWQPoint.mm:
        (QPoint::operator CGPoint): Added.
        (operator*): Added.
        (operator<<): Added.
        * kwq/KWQPointArray.h: Added.
        (QPoint::setX): Added.
        (QPoint::setY): Added.
        (QPoint::isNull): Added.
        (QPoint::operator -=): Added.
        * kwq/KWQPointArray.mm: Added.
        (QPointArray::QPointArray): Added.
        (QPointArray::copy): Added.
        (QPointArray::boundingRect): Added.
        (QPointArray::point): Added.
        Necessary additions for KDOM/KSVG/KCanvas
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3674

2005-07-06  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by hyatt.

        - fixed size() and contains() methods on HashSet (they would not compile before)

        * khtml/misc/hashset.h:
        (khtml::::size):
        * khtml/misc/hashtable.h:
        (khtml::::contains):

2005-07-06  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * ForwardingHeaders/kjs/ustring.h: Added.
        Used by kdom/Helper.cc
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3859

2005-07-06  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by adele.

        Modified layout tests to match rollout of changes for <rdar://problem/3792529> 
        REGRESSION (Mail): Tabs do not work the way they did in Panther

        Tests modified:
        * layout-tests/editing/deleting/delete-tab-001-expected.txt:
        * layout-tests/editing/deleting/delete-tab-002-expected.txt:
        * layout-tests/editing/deleting/delete-tab-003-expected.txt:
        * layout-tests/editing/deleting/delete-tab-004-expected.txt:
        * layout-tests/editing/inserting/insert-tab-001-expected.txt:
        * layout-tests/editing/inserting/insert-tab-002-expected.txt:
        * layout-tests/editing/inserting/insert-tab-003-expected.txt:
        * layout-tests/editing/inserting/insert-tab-004-expected.txt: